gateway/gke-gateway-controller/multi-cluster-gateway/internal-route-stage-4.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-store-route
  namespace: store
  labels:
    gateway: internal-http
spec:
  hostnames:
  - "store.example.internal"
  rules:
# No traffic to store-west-1 ServiceImport
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-west-1
      port: 8080
      weight: 0
# All traffic to store-west-2 ServiceImport
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-west-2
      port: 8080
      weight: 100
